Revert "WIP: Working on using modes"
This reverts commit bd3368ceb966d00e401c624a53d4b050f9a8ceea.