@@ -7,14 +7,10 @@ import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
 import se.group5.processor.Processor;
 
 
@@ -34,36 +30,32 @@ import se.group5.processor.Processor;
 @RunWith(Parameterized.class)
 public class ParserSmokeTest {
 
-    /** Maximum number of test programs to run through. */
-    private static final int MAX_TESTS = 100;
-
     @Parameterized.Parameter(0)
     public String resourcePath;
 
     @Parameterized.Parameters(name = "{0}")
-    public static Collection<Object[]> parameters() throws IOException {
-        try (Stream<Path> paths = Files.walk(
-                Paths.get(Objects.requireNonNull(
-                        AstSmokeTest.class.getResource("/programs")).toURI())
-        )) {
-            List<Object[]> tests = paths
+    public static Collection<Object[]> data() throws IOException {
+        try (java.util.stream.Stream<java.nio.file.Path> paths =
+                     java.nio.file.Files.walk(java.nio.file.Paths.get(
+                             Objects.requireNonNull(ParserSmokeTest.class
+                                     .getResource("/programs")).toURI()))) {
+
+            return paths
                     .filter(p -> p.toString().endsWith(".baby"))
-                    .sorted(Comparator.comparingInt(ParserSmokeTest::extractIndex))
-                    .limit(MAX_TESTS)                                 // ← cap at MAX_TESTS
-                    .map(p -> new Object[]{ "/programs/" + p.getFileName() })
-                    .collect(Collectors.toList());
-
-            if (tests.isEmpty()) {
-                throw new IOException("No .baby test files found in /programs");
-            }
-
-            return tests;
-        } catch (URISyntaxException e) {
+                    // ── sort by the integer between “_” and “.baby” ──────────────
+                    .sorted(java.util.Comparator.comparingInt(ParserSmokeTest::extractIndex))
+                    .map(p -> new Object[]{"/programs/" + p.getFileName()})
+                    .toList();          // Java 16+; replace with .collect(Collectors.toList()) if needed
+        } catch (Exception e) {
             throw new IOException("Unable to locate test programs in /programs", e);
         }
     }
 
-    private static int extractIndex(Path p) {
+    /**
+     * Helper that pulls the numeric part out of a filename such as “test_17.baby”.
+     * If no number is found the file is pushed to the end of the list.
+     */
+    private static int extractIndex(java.nio.file.Path p) {
         String name = p.getFileName().toString();   // e.g. “test_17.baby”
         int underscore = name.indexOf('_');
         int dot        = name.lastIndexOf('.');
@@ -72,7 +64,7 @@ public class ParserSmokeTest {
                 return Integer.parseInt(name.substring(underscore + 1, dot));
             } catch (NumberFormatException ignored) { /* fall through */ }
         }
-        return Integer.MAX_VALUE;
+        return Integer.MAX_VALUE;   // non-conforming names go to the end
     }
 
 
